Ažuriran dnevnik promjena

--- a/dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -16,8 +16,18 @@
 			0.2	& Napisan Opis projektnog zadatka & Horvat & 03.11.2020.	\\[3pt] \hline 
 			0.5 & Dodani Use Case dijagrami i sekvencijski dijagrami & Bortas & 04.11.2020. \\[3pt] \hline
 			0.7 & Dodan opis baze, tablica i ER dijagram & Horvat & 11.11.2020. \\[3pt]\hline
-			0.8 & Dodani dijagrami razreda & Bortas & 12.11.2020.
-			
+			0.8 & Dodani dijagrami razreda & Bortas & 12.11.2020. \\[3pt]\hline
+			1.0 & Dodana aktivnost članova i provjera dokumentacije & Horvat & 13.11.2020.  \\[3pt]\hline
+			1.1 & Dodan dijagram stanja, aktivnosti i dijagram razmještaja & Horvat & 6.1.2021. \\[3pt]\hline
+			1.2 & Dodan opis tehnologija i alata & Horvat & 7.1.2021. \\[3pt]\hline
+			1.3 & Ažuriran opis baze podataka i dodan ažuriran ER dijagram & Horvat & 11.1.2021. \\[3pt]\hline
+			1.4 & Dodan dijagram komponenti & Horvat & 11.1.2021. \\[3pt]\hline
+			1.5 & Dodan zaključak & Horvat & 11.1.2021. \\[3pt]\hline
+			1.6 & Dodani ažurirani dijagrami razreda & Horvat & 12.1.2021. \\[3pt]\hline
+			1.7 & Dodani grafovi aktivnosti s GitLaba & Horvat & 13.1.2021. \\[3pt]\hline
+			1.8 & Dodan opis testiranja & Horvat & 13.1.2021. \\[3pt]\hline
+			1.9 & Dodane upute za puštanje u pogon & Horvat & 14.1.2021. \\[3pt]\hline
+			2.0 & Konačna verzija & Horvat & 14.1.2021. \\[3pt]\hline
 			
 			
 		\end{longtabu}
