--- a/dokumentacija/Dodatak.tex
+++ b/dokumentacija/Dodatak.tex
@@ -1,4 +1,5 @@
 \chapter*{Dodatak: Prikaz aktivnosti grupe}
+		\addcontentsline{toc}{chapter}{Dodatak: Prikaz aktivnosti grupe}
 		
 		\section*{Dnevnik sastajanja}
 		
